--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -108,7 +108,12 @@
         </receiver>
 
         <activity android:name="com.android.launcher2.preference.Preferences"
-            android:label="@string/preferences_title" />
+            android:label="@string/preferences_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.cyanogenmod.category.LAUNCHER_PREFERENCES" />
+            </intent-filter>
+        </activity>
 
         <!-- Intent received used to install shortcuts from other applications -->
         <receiver
